# ai-chinese-checkers

./: .gitignore  LICENSE  README.md  board.py  game.py  move.py  neural_network.py  play.py  pyproject.toml  test.py  train.py
aicc/: pyproject.toml
aicc/lib/aicc/: board.py  game.py  neural_network.py  train.py
previous/mark1/: board.py  neural_network.py  test.py  train.py
src/aicc/: board.py  breed.py  game.py  neural_network.py  train.py
tests/aicc/: test_board.py  test_game.py
trainer/: pyproject.toml
