[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-chinese-checkers"
version = "0.2.0"
description = "AI Chinese Checkers"
authors = [
    { name="Kate Novak", email="kje@cochleoid.com" },
]
readme = "README.md"
license = "MIT"
dependencies = [
  "numpy",
  "torch",
]
requires-python = ">=3.11"

[tool.setuptools.packages.find]
where = [
  "./aicc/lib",
  "./trainer/lib",
]
