[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-chinese-checkers"
version = "0.2.0"
description = "AI Chinese Checkers"
authors = [
  { name="Kate Novak", email="kje@cochleoid.com" },
]
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
dependencies = [
  "numpy",
  "pytest",
  "torch",
]

[tool.setuptools.packages.find]
where = ["src"]
