[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "trainer"
version = "0.2.0"
description = "AI Trainer"
authors = [
  { name = "Kate Novak", email = "kje@cochleoid.com" },
]
readme = "README.md"
license = "MIT"
dependencies = [
]
requires-python = ">=3.11"
